增加统计接口
