# work/sg/common/v1/api.pb.go
@@ -243,6 +243,48 @@ func (m *SgMessageResp) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_SgMessageResp proto.InternalMessageInfo
 
+// 统计客户端连接数
+type CountClientResp struct {
+	Count                int64    `protobuf:"varint,1,opt,name=count,proto3" json:"count,omitempty"`
+	Ip                   string   `protobuf:"bytes,2,opt,name=ip,proto3" json:"ip,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *CountClientResp) Reset()         { *m = CountClientResp{} }
+func (m *CountClientResp) String() string { return proto.CompactTextString(m) }
+func (*CountClientResp) ProtoMessage()    {}
+func (*CountClientResp) Descriptor() ([]byte, []int) {
+	return fileDescriptor_94955c5bcc4b00ce, []int{2}
+}
+func (m *CountClientResp) XXX_Unmarshal(b []byte) error {
+	return m.Unmarshal(b)
+}
+func (m *CountClientResp) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	if deterministic {
+		return xxx_messageInfo_CountClientResp.Marshal(b, m, deterministic)
+	} else {
+		b = b[:cap(b)]
+		n, err := m.MarshalTo(b)
+		if err != nil {
+			return nil, err
+		}
+		return b[:n], nil
+	}
+}
+func (m *CountClientResp) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_CountClientResp.Merge(m, src)
+}
+func (m *CountClientResp) XXX_Size() int {
+	return m.Size()
+}
+func (m *CountClientResp) XXX_DiscardUnknown() {
+	xxx_messageInfo_CountClientResp.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_CountClientResp proto.InternalMessageInfo
+
 // 消息定义
 type SgMessage struct {
 	// 消息类别
@@ -268,7 +310,7 @@ func (m *SgMessage) Reset()         { *m = SgMessage{} }
 func (m *SgMessage) String() string { return proto.CompactTextString(m) }
 func (*SgMessage) ProtoMessage()    {}
 func (*SgMessage) Descriptor() ([]byte, []int) {
-	return fileDescriptor_94955c5bcc4b00ce, []int{2}
+	return fileDescriptor_94955c5bcc4b00ce, []int{3}
 }
 func (m *SgMessage) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
@@ -303,56 +345,59 @@ func init() {
 	proto.RegisterEnum("work.sg.common.v1.SgMessagePriority", SgMessagePriority_name, SgMessagePriority_value)
 	proto.RegisterType((*SgMessageReq)(nil), "work.sg.common.v1.SgMessageReq")
 	proto.RegisterType((*SgMessageResp)(nil), "work.sg.common.v1.SgMessageResp")
+	proto.RegisterType((*CountClientResp)(nil), "work.sg.common.v1.CountClientResp")
 	proto.RegisterType((*SgMessage)(nil), "work.sg.common.v1.SgMessage")
 }
 
 func init() { proto.RegisterFile("work/sg/common/v1/api.proto", fileDescriptor_94955c5bcc4b00ce) }
 
 var fileDescriptor_94955c5bcc4b00ce = []byte{
-	// 674 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x94, 0xcf, 0x4e, 0xdb, 0x4a,
-	0x14, 0xc6, 0x71, 0x9c, 0x3f, 0xe4, 0x04, 0xb8, 0x66, 0x40, 0x97, 0x08, 0x50, 0x88, 0xa2, 0x7b,
-	0x25, 0x84, 0x44, 0x7c, 0x81, 0xdd, 0x95, 0x2a, 0xd5, 0x49, 0xa6, 0x24, 0xaa, 0xf3, 0x47, 0xe3,
-	0x00, 0x2a, 0x9b, 0x91, 0xc1, 0x53, 0xd7, 0x6a, 0x12, 0x07, 0xcf, 0x24, 0x2d, 0xaf, 0xd1, 0x25,
-	0x8f, 0xd1, 0xa7, 0x60, 0xd9, 0x27, 0x40, 0x2d, 0x4b, 0x96, 0x7d, 0x82, 0x6a, 0xc6, 0x4e, 0x1a,
-	0x89, 0x8a, 0x95, 0xe7, 0xfc, 0xbe, 0xef, 0x9c, 0xf9, 0x66, 0x2c, 0x1b, 0x76, 0x3e, 0x85, 0xd1,
-	0x47, 0x93, 0xfb, 0xe6, 0x75, 0x38, 0x1c, 0x86, 0x23, 0x73, 0x7a, 0x64, 0xba, 0xe3, 0xa0, 0x3a,
-	0x8e, 0x42, 0x11, 0xa2, 0x75, 0x29, 0x56, 0xb9, 0x5f, 0x8d, 0xc5, 0xea, 0xf4, 0x68, 0x7b, 0xd3,
-	0x0f, 0xfd, 0x50, 0xa9, 0xa6, 0x5c, 0xc5, 0xc6, 0xed, 0x5d, 0x3f, 0x0c, 0xfd, 0x01, 0x93, 0xad,
-	0xa6, 0x3b, 0x1a, 0x85, 0xc2, 0x15, 0x41, 0x38, 0xe2, 0xb1, 0x5a, 0xb9, 0xd3, 0x60, 0xc5, 0xf1,
-	0xdb, 0x8c, 0x73, 0xd7, 0x67, 0x84, 0xdd, 0xa0, 0x2e, 0xe4, 0x86, 0x71, 0x55, 0xd4, 0xca, 0xda,
-	0x7e, 0xe1, 0x78, 0xb7, 0xfa, 0x6c, 0xa7, 0xea, 0xbc, 0xa3, 0xb6, 0xf5, 0xf3, 0x61, 0x6f, 0x63,
-	0xea, 0x0e, 0x02, 0xcf, 0x15, 0xec, 0xff, 0x4a, 0xc4, 0x6e, 0x26, 0x41, 0xc4, 0xbc, 0x0a, 0x99,
-	0x4d, 0x41, 0x65, 0x58, 0x99, 0x70, 0x16, 0xd1, 0xc0, 0xa3, 0x83, 0x80, 0x8b, 0x62, 0xaa, 0xac,
-	0xef, 0xeb, 0x04, 0x24, 0x6b, 0x79, 0x76, 0xc0, 0x05, 0xda, 0x82, 0xdc, 0xfb, 0x60, 0xc0, 0x68,
-	0xe0, 0x15, 0xf5, 0xb2, 0xb6, 0x9f, 0x27, 0x59, 0x59, 0xb6, 0xbc, 0xca, 0x25, 0xac, 0x2e, 0x64,
-	0xe3, 0x63, 0x54, 0x81, 0x2c, 0x17, 0xae, 0x98, 0x70, 0x95, 0x4d, 0xaf, 0xc1, 0xd3, 0xc3, 0x5e,
-	0x42, 0x48, 0xf2, 0x44, 0xff, 0x42, 0xee, 0x7a, 0x10, 0xb0, 0x91, 0xe0, 0xc5, 0x94, 0x32, 0x15,
-	0x9e, 0x1e, 0xf6, 0x66, 0x88, 0xcc, 0x16, 0x95, 0xbb, 0x14, 0xe4, 0xe7, 0xc3, 0xd1, 0x31, 0xe8,
-	0xde, 0x50, 0xa8, 0xa9, 0x6b, 0xc7, 0xe5, 0x97, 0x4e, 0xdc, 0xbf, 0x1d, 0x33, 0x22, 0xcd, 0x08,
-	0x41, 0xda, 0x73, 0x85, 0xab, 0x76, 0xc9, 0x13, 0xb5, 0x46, 0x3b, 0x90, 0xbf, 0x8e, 0x98, 0x2b,
-	0x18, 0x75, 0x85, 0x3a, 0x8c, 0x4e, 0x96, 0x63, 0x60, 0x09, 0x29, 0xb2, 0xcf, 0xe3, 0x20, 0x52,
-	0x62, 0x3a, 0x16, 0x63, 0x60, 0xa9, 0x4b, 0xe0, 0x6c, 0xe4, 0x49, 0x29, 0xa3, 0xa4, 0xac, 0x2c,
-	0x2d, 0x81, 0x5e, 0xc3, 0xf2, 0x38, 0x0a, 0xc2, 0x28, 0x10, 0xb7, 0xc5, 0xac, 0xca, 0xf7, 0xcf,
-	0x4b, 0xf9, 0x7a, 0x89, 0x97, 0xcc, 0xbb, 0xd0, 0x7f, 0x90, 0x61, 0x53, 0x36, 0x12, 0xc5, 0x9c,
-	0x6a, 0xdf, 0xfe, 0x63, 0x3b, 0x96, 0x0e, 0x12, 0x1b, 0x0f, 0x5e, 0x2d, 0x5c, 0xbc, 0x3c, 0x30,
-	0xfa, 0x0b, 0x0a, 0x8d, 0x76, 0x9f, 0x9e, 0x75, 0xde, 0x76, 0xba, 0x17, 0x1d, 0x63, 0x09, 0x15,
-	0x20, 0x27, 0x41, 0xbf, 0xd6, 0x30, 0x34, 0xb4, 0x06, 0xa0, 0x0a, 0x82, 0x3b, 0x0d, 0xc7, 0x48,
-	0x1d, 0x7c, 0xd5, 0x20, 0x97, 0x4c, 0x94, 0x9a, 0x83, 0x17, 0x1a, 0x11, 0xac, 0x39, 0x98, 0x5a,
-	0x8d, 0x06, 0xb5, 0x1c, 0x5a, 0xef, 0xda, 0xb6, 0xa1, 0x25, 0xac, 0x81, 0xed, 0x39, 0x4b, 0x25,
-	0x7d, 0xf5, 0xe6, 0x29, 0xed, 0xe1, 0xb6, 0xa1, 0x23, 0x80, 0xac, 0x83, 0x69, 0xdf, 0x79, 0x63,
-	0xa4, 0x67, 0x33, 0x7a, 0xbd, 0xb9, 0x3f, 0x23, 0x13, 0x3a, 0x98, 0x76, 0xfa, 0xb4, 0xde, 0xc6,
-	0x9d, 0xbe, 0x91, 0x45, 0x06, 0xac, 0xc4, 0x80, 0xe0, 0xf3, 0x96, 0x83, 0x8d, 0x1c, 0xda, 0x85,
-	0x62, 0x62, 0xe9, 0xda, 0x0e, 0xa6, 0xbd, 0xb3, 0x9a, 0xdd, 0xaa, 0x53, 0xa7, 0x69, 0x11, 0x6c,
-	0x2c, 0x1f, 0x7c, 0xd1, 0x60, 0xfd, 0xd9, 0x2d, 0xaa, 0xb1, 0xed, 0xde, 0x42, 0xfe, 0xbf, 0x01,
-	0x49, 0x70, 0x8e, 0xc9, 0x3b, 0x6a, 0x77, 0x2f, 0xe8, 0xb9, 0x65, 0x9f, 0x61, 0x43, 0x43, 0xeb,
-	0xb0, 0x2a, 0xf9, 0x6f, 0x94, 0x42, 0x9b, 0x60, 0x48, 0xd4, 0xe9, 0x92, 0xb6, 0x65, 0x27, 0x54,
-	0x57, 0xe1, 0xdb, 0x3d, 0xda, 0x6c, 0x9d, 0x36, 0x13, 0x96, 0x46, 0x5b, 0xb0, 0x31, 0x1f, 0xba,
-	0x20, 0x64, 0x6a, 0xf8, 0xfe, 0x47, 0x69, 0xe9, 0xfe, 0xb1, 0xa4, 0x7d, 0x7b, 0x2c, 0x69, 0xdf,
-	0x1f, 0x4b, 0xda, 0xe5, 0x89, 0x1f, 0x88, 0x0f, 0x93, 0x2b, 0xf9, 0xee, 0x4c, 0x2e, 0xc2, 0x68,
-	0x6a, 0x7a, 0xfc, 0xea, 0x90, 0xb3, 0x68, 0xca, 0xa2, 0xc3, 0xf8, 0xe3, 0x7f, 0xf6, 0xdb, 0xb8,
-	0xca, 0x2a, 0xe1, 0xe4, 0x57, 0x00, 0x00, 0x00, 0xff, 0xff, 0xff, 0xb1, 0x15, 0x67, 0x52, 0x04,
-	0x00, 0x00,
+	// 705 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x94, 0xcd, 0x6e, 0xdb, 0x46,
+	0x14, 0x85, 0x43, 0x52, 0x3f, 0xd6, 0x95, 0xa3, 0xd0, 0x13, 0xa3, 0x16, 0x1c, 0x43, 0x16, 0x84,
+	0x16, 0x30, 0x0c, 0x44, 0x6c, 0x9c, 0x45, 0x81, 0x02, 0x05, 0x4a, 0x49, 0xd3, 0x48, 0x28, 0xf5,
+	0x83, 0xa1, 0xec, 0xa0, 0xd9, 0x0c, 0x68, 0x71, 0xca, 0x0e, 0x2a, 0x91, 0x0c, 0x67, 0xa4, 0x36,
+	0xaf, 0xd1, 0x65, 0x1e, 0xa3, 0x4f, 0x91, 0x65, 0x9f, 0xc0, 0x68, 0xbd, 0xcc, 0xb2, 0x4f, 0x50,
+	0xcc, 0x90, 0x52, 0x05, 0x38, 0xc8, 0x4a, 0x73, 0xbf, 0x73, 0xcf, 0xd1, 0xe1, 0x10, 0x20, 0x3c,
+	0xfb, 0x2d, 0xc9, 0x7e, 0x75, 0x44, 0xe4, 0x2c, 0x92, 0xd5, 0x2a, 0x89, 0x9d, 0xcd, 0x0b, 0x27,
+	0x48, 0x79, 0x37, 0xcd, 0x12, 0x99, 0xa0, 0x23, 0x25, 0x76, 0x45, 0xd4, 0xcd, 0xc5, 0xee, 0xe6,
+	0xc5, 0xe9, 0x71, 0x94, 0x44, 0x89, 0x56, 0x1d, 0x75, 0xca, 0x17, 0x4f, 0xcf, 0xa2, 0x24, 0x89,
+	0x96, 0x4c, 0x59, 0x9d, 0x20, 0x8e, 0x13, 0x19, 0x48, 0x9e, 0xc4, 0x22, 0x57, 0x3b, 0xef, 0x0d,
+	0x38, 0xf4, 0xa3, 0x31, 0x13, 0x22, 0x88, 0x18, 0x61, 0x6f, 0xd1, 0x14, 0xaa, 0xab, 0x7c, 0x6a,
+	0x1a, 0x6d, 0xe3, 0xa2, 0x7e, 0x75, 0xd6, 0x7d, 0xf0, 0x4f, 0xdd, 0x9d, 0xa3, 0x77, 0xf2, 0xef,
+	0xdd, 0xf9, 0xd3, 0x4d, 0xb0, 0xe4, 0x61, 0x20, 0xd9, 0xb7, 0x9d, 0x8c, 0xbd, 0x5d, 0xf3, 0x8c,
+	0x85, 0x1d, 0xb2, 0x4d, 0x41, 0x6d, 0x38, 0x5c, 0x0b, 0x96, 0x51, 0x1e, 0xd2, 0x25, 0x17, 0xb2,
+	0x69, 0xb6, 0xad, 0x0b, 0x8b, 0x80, 0x62, 0xa3, 0xd0, 0xe3, 0x42, 0xa2, 0x13, 0xa8, 0xfe, 0xcc,
+	0x97, 0x8c, 0xf2, 0xb0, 0x69, 0xb5, 0x8d, 0x8b, 0x1a, 0xa9, 0xa8, 0x71, 0x14, 0x76, 0xde, 0xc0,
+	0xe3, 0xbd, 0x6e, 0x22, 0x45, 0x1d, 0xa8, 0x08, 0x19, 0xc8, 0xb5, 0xd0, 0xdd, 0xac, 0x1e, 0x7c,
+	0xbc, 0x3b, 0x2f, 0x08, 0x29, 0x7e, 0xd1, 0x57, 0x50, 0x5d, 0x2c, 0x39, 0x8b, 0xa5, 0x68, 0x9a,
+	0x7a, 0xa9, 0xfe, 0xf1, 0xee, 0x7c, 0x8b, 0xc8, 0xf6, 0xd0, 0xf9, 0x06, 0x9e, 0xf4, 0x93, 0x75,
+	0x2c, 0xfb, 0x7a, 0xd6, 0xe9, 0xc7, 0x50, 0x5e, 0x28, 0x94, 0x87, 0x93, 0x7c, 0x40, 0x0d, 0x30,
+	0x79, 0xaa, 0xa3, 0x6a, 0xc4, 0xe4, 0x69, 0xe7, 0xbd, 0x09, 0xb5, 0x5d, 0x2b, 0x74, 0x05, 0x56,
+	0xb8, 0xca, 0x1d, 0x8d, 0xab, 0xf6, 0xe7, 0xae, 0x6a, 0xfe, 0x2e, 0x65, 0x44, 0x2d, 0x23, 0x04,
+	0xa5, 0x30, 0x90, 0x41, 0x91, 0xa9, 0xcf, 0xe8, 0x19, 0xd4, 0x16, 0x19, 0x0b, 0x24, 0xa3, 0x81,
+	0xd4, 0xb7, 0x60, 0x91, 0x83, 0x1c, 0xb8, 0x52, 0x89, 0xec, 0xf7, 0x94, 0x67, 0x5a, 0x2c, 0xe5,
+	0x62, 0x0e, 0x5c, 0x7d, 0x7b, 0x82, 0xc5, 0xa1, 0x92, 0xca, 0x5a, 0xaa, 0xa8, 0xd1, 0x95, 0xe8,
+	0x7b, 0x38, 0x48, 0x33, 0x9e, 0x64, 0x5c, 0xbe, 0x6b, 0x56, 0x74, 0xbf, 0x2f, 0x3f, 0xd7, 0x6f,
+	0x56, 0xec, 0x92, 0x9d, 0x0b, 0x7d, 0x0d, 0x65, 0xb6, 0x61, 0xb1, 0x6c, 0x56, 0xb5, 0xfd, 0xf4,
+	0x93, 0x76, 0xac, 0x36, 0x48, 0xbe, 0x78, 0xf9, 0xdd, 0xde, 0x1b, 0x53, 0x0f, 0x8c, 0x9e, 0x40,
+	0x7d, 0x30, 0x9e, 0xd3, 0xeb, 0xc9, 0x8f, 0x93, 0xe9, 0xeb, 0x89, 0xfd, 0x08, 0xd5, 0xa1, 0xaa,
+	0xc0, 0xbc, 0x37, 0xb0, 0x0d, 0xd4, 0x00, 0xd0, 0x03, 0xc1, 0x93, 0x81, 0x6f, 0x9b, 0x97, 0x7f,
+	0x1a, 0x50, 0x2d, 0x12, 0x95, 0xe6, 0xe3, 0x3d, 0x23, 0x82, 0x86, 0x8f, 0xa9, 0x3b, 0x18, 0x50,
+	0xd7, 0xa7, 0xfd, 0xa9, 0xe7, 0xd9, 0x46, 0xc1, 0x06, 0xd8, 0xdb, 0x31, 0xb3, 0xf0, 0xf5, 0x87,
+	0xaf, 0xe8, 0x0c, 0x8f, 0x6d, 0x0b, 0x01, 0x54, 0x7c, 0x4c, 0xe7, 0xfe, 0x0f, 0x76, 0x69, 0x9b,
+	0x31, 0x9b, 0xed, 0xf6, 0xcb, 0xaa, 0xa1, 0x8f, 0xe9, 0x64, 0x4e, 0xfb, 0x63, 0x3c, 0x99, 0xdb,
+	0x15, 0x64, 0xc3, 0x61, 0x0e, 0x08, 0xbe, 0x19, 0xf9, 0xd8, 0xae, 0xa2, 0x33, 0x68, 0x16, 0x2b,
+	0x53, 0xcf, 0xc7, 0x74, 0x76, 0xdd, 0xf3, 0x46, 0x7d, 0xea, 0x0f, 0x5d, 0x82, 0xed, 0x83, 0xcb,
+	0x3f, 0x0c, 0x38, 0x7a, 0x70, 0x8b, 0x3a, 0x76, 0x3c, 0xdb, 0xeb, 0xff, 0x05, 0x20, 0x05, 0x6e,
+	0x30, 0xf9, 0x89, 0x7a, 0xd3, 0xd7, 0xf4, 0xc6, 0xf5, 0xae, 0xb1, 0x6d, 0xa0, 0x23, 0x78, 0xac,
+	0xf8, 0xff, 0xc8, 0x44, 0xc7, 0x60, 0x2b, 0x34, 0x99, 0x92, 0xb1, 0xeb, 0x15, 0xd4, 0xd2, 0xe5,
+	0xc7, 0x33, 0x3a, 0x1c, 0xbd, 0x1a, 0x16, 0xac, 0x84, 0x4e, 0xe0, 0xe9, 0x2e, 0x74, 0x4f, 0x28,
+	0xf7, 0xf0, 0x87, 0x7f, 0x5a, 0x8f, 0x3e, 0xdc, 0xb7, 0x8c, 0xbf, 0xee, 0x5b, 0xc6, 0xdf, 0xf7,
+	0x2d, 0xe3, 0xcd, 0xcb, 0x88, 0xcb, 0x5f, 0xd6, 0xb7, 0xea, 0xdd, 0x39, 0x42, 0x26, 0xd9, 0xc6,
+	0x09, 0xc5, 0xed, 0x73, 0xc1, 0xb2, 0x0d, 0xcb, 0x9e, 0xe7, 0x5f, 0x8d, 0x07, 0xdf, 0x9b, 0xdb,
+	0x8a, 0x16, 0x5e, 0xfe, 0x17, 0x00, 0x00, 0xff, 0xff, 0x58, 0xd6, 0x06, 0xd5, 0x8b, 0x04, 0x00,
+	0x00,
 }
 
 func (m *SgMessageReq) Marshal() (dAtA []byte, err error) {
@@ -434,6 +479,38 @@ func (m *SgMessageResp) MarshalTo(dAtA []byte) (int, error) {
 		dAtA[i] = 0x10
 		i++
 		i = encodeVarintApi(dAtA, i, uint64(m.Clients))
+	}
+	if m.XXX_unrecognized != nil {
+		i += copy(dAtA[i:], m.XXX_unrecognized)
+	}
+	return i, nil
+}
+
+func (m *CountClientResp) Marshal() (dAtA []byte, err error) {
+	size := m.Size()
+	dAtA = make([]byte, size)
+	n, err := m.MarshalTo(dAtA)
+	if err != nil {
+		return nil, err
+	}
+	return dAtA[:n], nil
+}
+
+func (m *CountClientResp) MarshalTo(dAtA []byte) (int, error) {
+	var i int
+	_ = i
+	var l int
+	_ = l
+	if m.Count != 0 {
+		dAtA[i] = 0x8
+		i++
+		i = encodeVarintApi(dAtA, i, uint64(m.Count))
+	}
+	if len(m.Ip) > 0 {
+		dAtA[i] = 0x12
+		i++
+		i = encodeVarintApi(dAtA, i, uint64(len(m.Ip)))
+		i += copy(dAtA[i:], m.Ip)
 	}
 	if m.XXX_unrecognized != nil {
 		i += copy(dAtA[i:], m.XXX_unrecognized)
@@ -545,6 +622,25 @@ func (m *SgMessageResp) Size() (n int) {
 	}
 	if m.Clients != 0 {
 		n += 1 + sovApi(uint64(m.Clients))
+	}
+	if m.XXX_unrecognized != nil {
+		n += len(m.XXX_unrecognized)
+	}
+	return n
+}
+
+func (m *CountClientResp) Size() (n int) {
+	if m == nil {
+		return 0
+	}
+	var l int
+	_ = l
+	if m.Count != 0 {
+		n += 1 + sovApi(uint64(m.Count))
+	}
+	l = len(m.Ip)
+	if l > 0 {
+		n += 1 + l + sovApi(uint64(l))
 	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
@@ -864,6 +960,111 @@ func (m *SgMessageResp) Unmarshal(dAtA []byte) error {
 					break
 				}
 			}
+		default:
+			iNdEx = preIndex
+			skippy, err := skipApi(dAtA[iNdEx:])
+			if err != nil {
+				return err
+			}
+			if skippy < 0 {
+				return ErrInvalidLengthApi
+			}
+			if (iNdEx + skippy) < 0 {
+				return ErrInvalidLengthApi
+			}
+			if (iNdEx + skippy) > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.XXX_unrecognized = append(m.XXX_unrecognized, dAtA[iNdEx:iNdEx+skippy]...)
+			iNdEx += skippy
+		}
+	}
+
+	if iNdEx > l {
+		return io.ErrUnexpectedEOF
+	}
+	return nil
+}
+func (m *CountClientResp) Unmarshal(dAtA []byte) error {
+	l := len(dAtA)
+	iNdEx := 0
+	for iNdEx < l {
+		preIndex := iNdEx
+		var wire uint64
+		for shift := uint(0); ; shift += 7 {
+			if shift >= 64 {
+				return ErrIntOverflowApi
+			}
+			if iNdEx >= l {
+				return io.ErrUnexpectedEOF
+			}
+			b := dAtA[iNdEx]
+			iNdEx++
+			wire |= uint64(b&0x7F) << shift
+			if b < 0x80 {
+				break
+			}
+		}
+		fieldNum := int32(wire >> 3)
+		wireType := int(wire & 0x7)
+		if wireType == 4 {
+			return fmt.Errorf("proto: CountClientResp: wiretype end group for non-group")
+		}
+		if fieldNum <= 0 {
+			return fmt.Errorf("proto: CountClientResp: illegal tag %d (wire type %d)", fieldNum, wire)
+		}
+		switch fieldNum {
+		case 1:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Count", wireType)
+			}
+			m.Count = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowApi
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.Count |= int64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 2:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Ip", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowApi
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthApi
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthApi
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Ip = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
 			skippy, err := skipApi(dAtA[iNdEx:])
